--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,11 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>论坛</title>
+  <link rel="stylesheet" href="./lib//css/modal.css">
+  <script src="./lib//js/modal.js"></script>
 </head>
 
 <body>
-  胡若兰同学是个大沙雕12345
-</body>
+  <button id="luntan-login" style="display: block;">登录</button>
+  <script>
+    window.addEventListener('load', function() {
+      document.getElementById('luntan-login').onclick = function() {
+        modalConfig();
+      };
+    });
+  </script>
 
+</body>
 </html>
